--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "html2canvas": "^1.0.0-alpha.10",
+    "file-saver": "^1.3.8",
     "vue": "^2.5.11"
   },
   "browserslist": [
